RESOLVED FIXED233593
[JSC] slice should be aware of TerminationException
https://bugs.webkit.org/show_bug.cgi?id=233593
Summary [JSC] slice should be aware of TerminationException
Yusuke Suzuki
Reported 2021-11-29 13:19:57 PST
[JSC] slice should be aware of terminated excution exception
Attachments
Patch (6.17 KB, patch)
2021-11-29 13:20 PST, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2021-11-29 13:20:37 PST
Yusuke Suzuki
Comment 2 2021-11-29 13:20:42 PST
Mark Lam
Comment 3 2021-11-29 13:29:31 PST
Comment on attachment 445332 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=445332&action=review r=me > Source/JavaScriptCore/ChangeLog:3 > + [JSC] slice should be aware of terminated excution exception It’s called a TerminationException now. Also, you had a typo in “excution”. > Source/JavaScriptCore/ChangeLog:9 > + Since terminated execution exception can happen at any time, assertNoException is wrong. Ditto. Please use “termination exception” instead. > JSTests/ChangeLog:9 > + * stress/slice-terminated-execution-exception.js: Added. I suggest renaming this to slice-termination-exception.js to match the new naming.
Yusuke Suzuki
Comment 4 2021-11-29 17:21:04 PST
Note You need to log in before you can comment on or make changes to this bug.