Cherry-pick r286275. rdar://problem/87125258

[JSC] slice should be aware of TerminationException
    https://bugs.webkit.org/show_bug.cgi?id=233593
    rdar://85823844

    Reviewed by Mark Lam.

    JSTests:

    * stress/slice-termination-exception.js: Added.
    (async infiniteLoop):

    Source/JavaScriptCore:

    Since termination exception can happen at any time, assertNoException is wrong.

    * runtime/ArrayPrototype.cpp:
    (JSC::JSC_DEFINE_HOST_FUNCTION):

    Canonical link: https://commits.webkit.org/244636@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286275 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.530@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@287625 268f45cc-cd09-0410-ab3c-d52691b4dbfc